--- a/index.html
+++ b/index.html
@@ -1,10 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
-
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Homework-05</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600;700&family=Roboto:wght@300;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <nav class="nav-menu clearfix">
+          <a href="#" class="logo">
+            mart
+          </a>
+          <ul class="menu-list-items clearfix">
+            <li  class="list-item">
+              <a href="#">
+                home
+              </a>
+            </li>
+            <li class="list-item">
+              <a href="#">
+                about Us
+              </a>
+            </li>
+            <li class="list-item">
+              <a href="#">
+                page
+              </a>
+            </li>
+            <li class="list-item">
+              <a href="#">
+                shop
+              </a>
+            </li>
+            <li class="list-item">
+              <a href="#">
+                blog
+              </a>
+            </li>
+            <li class="list-item">
+              <a href="#">
+                contact Us
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="main-container">
+      <div class="slider">
+        <img src="img/slider/slider.jpg" width="1600" height="600" alt="women">
+        <div class="slider-container">
+          <h2 class="slider-title">
+            affordable paris tours
+          </h2>
+          <p class="text-slider">
+            city tours &#8260; tour tickets &#8260; tour guides
+          </p>
+        </div>
+        <div class="slider-buttons clearfix">
+          <button class="btn-prev"></button>
+          <button class="btn-next"></button>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
