add new collection section, add footer, complete landing page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,136 @@
           <button class="btn-next"></button>
         </div>
       </div>
+      <section class="new-collection">
+        <div class="container">
+          <h2 class="section-title">
+            new collection
+          </h2>
+          <ul class="products-list clearfix">
+            <li class="product">
+              <div class="img-product-wrapper">
+                <img src="img/new-collection-products/product-1.jpg" width="255" height="282" alt="man in blue t-shirt">
+                <div class="overlay">
+                  <div class="btn-product clearfix">
+                    <button class="heart btn-row btn-change-bg-state"></button>
+                    <button class="arrows btn-row btn-change-bg-state"></button>
+                    <button class="clock btn-row btn-change-bg-state"></button>
+                    <button class="basket btn-change-bg-state clearfix">
+                      <span class="add-product">
+                        add to card
+                      </span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <a href="#">
+                <p class="about-product clearfix">
+                <span class="about-product-info product-name">
+                  blue tshirt
+                </span>
+                  <span class="about-product-info product-price">
+                  &#36;26
+                </span>
+                </p>
+              </a>
+            </li>
+            <li class="product">
+              <div class="img-product-wrapper">
+                <img src="img/new-collection-products/product-2.jpg" width="255" height="282"  alt="woman in shirt">
+                <div class="overlay">
+                  <div class="btn-product clearfix">
+                    <button class="heart btn-row btn-change-bg-state"></button>
+                    <button class="arrows btn-row btn-change-bg-state"></button>
+                    <button class="clock btn-row btn-change-bg-state"></button>
+                    <button class="basket btn-change-bg-state clearfix">
+                      <span class="add-product">
+                        add to card
+                      </span>
+                    </button>
+                  </div>
+                </div>
+               </div>
+              <a href="#">
+                <p class="about-product clearfix">
+                <span class="about-product-info product-name">
+                  woman shirt
+                </span>
+                  <span class="about-product-info product-price">
+                  &#36;31
+                </span>
+                </p>
+              </a>
+            </li>
+            <li class="product">
+              <div class="img-product-wrapper">
+                <img src="img/new-collection-products/product-3.jpg" width="255" height="282" alt="man in yellow t-shirt">
+                <div class="overlay">
+                  <div class="btn-product clearfix">
+                    <button class="heart btn-row btn-change-bg-state"></button>
+                    <button class="arrows btn-row btn-change-bg-state"></button>
+                    <button class="clock btn-row btn-change-bg-state"></button>
+                    <button class="basket btn-change-bg-state clearfix">
+                      <span class="add-product">
+                        add to card
+                      </span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <a href="#">
+                <p class="about-product clearfix">
+                <span class="about-product-info product-name">
+                  yelow tshirt
+                </span>
+                  <span class="about-product-info product-price">
+                  &#36;21
+                </span>
+                </p>
+              </a>
+            </li>
+            <li class="product">
+              <div class="img-product-wrapper">
+                <img src="img/new-collection-products/product-4.jpg" width="255" height="282" alt="woman in lingerie">
+                <div class="overlay">
+                  <div class="btn-product clearfix">
+                    <button class="heart btn-row btn-change-bg-state"></button>
+                    <button class="arrows btn-row btn-change-bg-state"></button>
+                    <button class="clock btn-row btn-change-bg-state"></button>
+                    <button class="basket btn-change-bg-state clearfix">
+                      <span class="add-product">
+                        add to card
+                      </span>
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <a href="#">
+                <p class="about-product clearfix">
+                <span class="about-product-info product-name">
+                  cool lingerie
+                </span>
+                  <span class="about-product-info product-price">
+                  &#36;56
+                </span>
+                </p>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="footer-container clearfix">
+        <p class="footer-text footer-text-left">
+          all rights reserved &#169; Dokan
+        </p>
+        <p class="footer-text footer-text-right">
+          Designed
+          <a href="#" class="footer-designed-link">
+            ThemenGraph
+          </a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
