fixed product title complete landing page

--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
                   </div>
                 </div>
               </div>
-              <p class="about-product clearfix">
+              <div class="about-product clearfix">
                 <a href="#">
-                  <span class="about-product-info product-name">
+                  <h3 class="about-product-info product-name">
                     blue tshirt
-                  </span>
+                  </h3>
                 </a>
                 <span class="about-product-info product-price">
                   &#36;26
                 </span>
-              </p>
+              </div>
             </li>
             <li class="product">
               <div class="img-product-wrapper">
@@ -114,16 +114,16 @@
                   </div>
                 </div>
                </div>
-               <p class="about-product clearfix">
+               <div class="about-product clearfix">
                  <a href="#">
-                   <span class="about-product-info product-name">
+                   <h3 class="about-product-info product-name">
                      woman shirt
-                   </span>
+                   </h3>
                  </a>
                  <span class="about-product-info product-price">
                    &#36;31
                  </span>
-               </p>
+               </div>
             </li>
             <li class="product">
               <div class="img-product-wrapper">
@@ -141,16 +141,16 @@
                   </div>
                 </div>
               </div>
-              <p class="about-product clearfix">
+              <div class="about-product clearfix">
                 <a href="#">
-                  <span class="about-product-info product-name">
+                  <h3 class="about-product-info product-name">
                     yelow tshirt
-                  </span>
+                  </h3>
                 </a>
                 <span class="about-product-info product-price">
                   &#36;21
                 </span>
-              </p>
+              </div>
             </li>
             <li class="product">
               <div class="img-product-wrapper">
@@ -168,16 +168,16 @@
                   </div>
                 </div>
               </div>
-              <p class="about-product clearfix">
+              <div class="about-product clearfix">
                 <a href="#">
-                  <span class="about-product-info product-name">
+                  <h3 class="about-product-info product-name">
                     cool lingerie
-                  </span>
+                  </h3>
                 </a>
                 <span class="about-product-info product-price">
                   &#36;56
                 </span>
-              </p>
+              </div>
             </li>
           </ul>
         </div>
